# bar

./: CMakeLists.txt
CMake/: BarConfig.cmake.in
