cmake_minimum_required(VERSION 3.2)

project(bar)

SET(VERSION_MAJOR "0")
SET(VERSION_MINOR "1")
SET(VERSION_PATCH "0")
SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")

ADD_DEFINITIONS(-DVERSION="${VERSION}")

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")

set(BAR_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/dinclude)
set(BAR_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/dbin)
set(BAR_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/dlib)

set(BAR_HEADERS_DIR ${PROJECT_SOURCE_DIR}/include)

include_directories(${BAR_INSTALL_INCLUDE_DIR})
include_directories(${BAR_HEADERS_DIR})

add_library(bar SHARED
	src/bar.cpp
	)

INSTALL(TARGETS bar DESTINATION bin)
